--- a/agents/templates/agents/order_view.html
+++ b/agents/templates/agents/order_view.html
@@ -1,4 +1,4 @@
-{{% extends 'agent_base.html' %}
+{% extends 'agent_base.html' %}
 {% load static %}
 
 {% block content %}
@@ -14,12 +14,11 @@
                     <div class="row">
                         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                             <div class="page-header">
-                                <h2 class="pageheader-title">Messages</h2>
+                                <h2 class="pageheader-title">Order {{ items.first.order.id }}</h2>
                                 <div class="page-breadcrumb">
                                     <nav aria-label="breadcrumb">
                                         <ol class="breadcrumb">
-                                            <li class="breadcrumb-item"><a href="{% url 'agent:home' %}" class="breadcrumb-link">My Dashboard</a></li>
-                                            <li class="breadcrumb-item active" aria-current="page">Messages</li>
+                                            <li class="breadcrumb-item"><a href="javascript:history.back()">Back</a></li>
                                         </ol>
                                     </nav>
                                 </div>
@@ -28,34 +27,40 @@
                     </div>
                     <!-- ============================================================== -->
                     <!-- end pageheader  -->
-                    
                     <!-- ============================================================== -->
                         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                             <div class="card border-3 border-top border-top-primary">
-                                <h5 class="card-header">Messages</h5>
+                                <h5 class="card-header">Order {{ items.first.order.id }}</h5>
                                 <div class="card-body p-0">
                                     <div class="table-responsive">
-                                        <table class="table" style="text-align: center;">
+                                        <table class="table">
                                             <thead class="bg-light">
                                                 <tr class="border-0">
-                                                    <th class="border-0">Timestamp</th>
-                                                    <th class="border-0">Message</th>
+                                                    <th class="border-0">Product</th>
+                                                    <th class="border-0">Quantity</th>
+                                                    <th class="border-0">Price</th>
+                                                    <th class="border-0">Total</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
-                                              {% for notif in notifs %}
+                                              {% for item in items %}
                                                 <tr>
-                                                  <td class="align-middle">{{ notif.created }}</td>
-                                                  <td class="align-middle">{{ notif.message }}</td>
+                                                    <td class="align-middle">{{ item.product.name }}</a></td>
+                                                    <td class="align-middle">{{ item.quantity }}</td>
+                                                    <td class="align-middle">{{ item.price }}</td>
+                                                    <td class="align-middle">{{ item.get_cost }}</td>
+                                                  </td>
                                                 </tr>
-                                              {% empty %}
+                                                {% empty %}
                                                 <tr>
-                                                  <td class="bg-light text-center font-italic" colspan="5">No Notifications.</td>
+                                                  <td colspan="4" style="text-align: center;">No products.</td>
                                                 </tr>
                                               {% endfor %}
+                                                
                                             </tbody>
                                         </table>
                                     </div>
+
                                 </div>
                             </div>
                         </div>
