--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -16,14 +16,15 @@
                     <div class="regular-page-content-wrapper section-padding-80">
                         <div class="regular-page-text">
                             <h2>About Us</h2>
-                            <p>Mauris viverra cursus ante laoreet eleifend. Donec vel fringilla ante. Aenean finibus velit id urna vehicula, nec maximus est sollicitudin. Praesent at tempus lectus, eleifend blandit felis. Fusce augue arcu, consequat a nisl aliquet, consectetur elementum turpis. Donec iaculis lobortis nisl, et viverra risus imperdiet eu. Etiam mollis posuere elit non sagittis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis arcu a magna sodales venenatis. Integer non diam sit amet magna luctus mollis ac eu nisi. In accumsan tellus ut dapibus blandit.</p>
+                            <p>The Water Company is a part of the Repute Infotech and Enterprises Limited family. Our manufacturing plant is situated at Ulundai Village, Thiruvallur District about 45 kilometers away from Chennai.</p>
+                            <p> The safe water source is naturally protected by the pollution free and greenish environment. Repute has its own trained workers and fleet of vehicles to carry out the distribution process in time without any additional cost for the customers. To put in a nut-shell, though the cost of our product is commensurate and nominal, the quality remains matchless and superior.</p>
 
                             <blockquote>
-                                <h6><i class="fa fa-quote-left" aria-hidden="true"></i> Quisque sagittis non ex eget vestibulum. Sed nec ultrices dui. Cras et sagittis erat. Maecenas pulvinar, turpis in dictum tincidunt, dolor nibh lacinia lacus.</h6>
-                                <span>Liam Neeson</span>
+                                <h6><i class="fa fa-quote-left" aria-hidden="true"></i> You can't cross the sea merely by standing and staring at the water.</h6>
+                                <span>Rabindranath Tagore</span>
                             </blockquote>
 
-                            <p>Praesent ac magna sed massa euismod congue vitae vitae risus. Nulla lorem augue, mollis non est et, eleifend elementum ante. Nunc id pharetra magna. Praesent vel orci ornare, blandit mi sed, aliquet nisi. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+                            <p>Our manufacturing unit has an outstanding capacity of producing purified water and is handled by professionally skilled chemists, micro-biologists and experienced technicians.</p>
                         </div>
                     </div>
                 </div>
